# personaplex-finetune

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  MODEL_CARD.md  QUICKSTART.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  training-failure.yml
VibeVoice/: LICENSE
configs/: pharma_demo.yaml
data/: README.md
docs/: SETUP_GUIDE.md
docs/history/: README.md
docs/history/notes/: AB_TEST_HANDOFF.md  AB_TEST_SESSION_NOTES.md  DUPLEX_AND_FINETUNING_NOTES.md  EXPERIMENT_REPORT.md  INFERENCE_DEBUG_NOTES.md  README.md  combined_experiment_report.md  logbook.md  puppeteer.md  weekend_experiments_2026-04-04.md
docs/history/wandb/: README.md  _export.py  index.json  summary.csv
docs/history/wandb/adhery-demo/0irtky6i/: config.yaml  history.parquet  summary.json
docs/history/wandb/adhery-demo/0it5avqv/: config.yaml  history.parquet  summary.json
docs/history/wandb/adhery-demo/1e5v8knz/: config.yaml  history.parquet  summary.json
docs/history/wandb/adhery-demo/1r2n6wse/: config.yaml  history.parquet  summary.json
docs/history/wandb/adhery-demo/1v6fvqoa/: config.yaml  history.parquet  summary.json
docs/history/wandb/adhery-demo/3y5r16rh/: config.yaml  history.parquet  summary.json
docs/history/wandb/adhery-demo/6ag8f4h1/: config.yaml  history.parquet  summary.json
docs/history/wandb/adhery-demo/7jci5f44/: config.yaml  history.parquet  summary.json
docs/history/wandb/adhery-demo/8judzoth/: config.yaml  history.parquet  summary.json
docs/history/wandb/adhery-demo/b7a2g5se/: config.yaml  history.parquet  summary.json
docs/history/wandb/adhery-demo/cc0tmlke/: config.yaml  history.parquet  summary.json
docs/history/wandb/adhery-demo/dkap8fg1/: config.yaml  history.parquet  summary.json
docs/history/wandb/adhery-demo/dtdsozcl/: config.yaml  history.parquet  summary.json
docs/history/wandb/adhery-demo/gl3z50bu/: history.parquet  summary.json
docs/history/wandb/adhery-demo/lbj9nokr/: config.yaml  history.parquet  summary.json
docs/history/wandb/adhery-demo/m6uq6my8/: config.yaml  history.parquet  summary.json
docs/history/wandb/adhery-demo/ndhvybql/: config.yaml  history.parquet  summary.json
docs/history/wandb/adhery-demo/ox6mu5dn/: config.yaml  history.parquet  summary.json
docs/history/wandb/adhery-demo/qczzjv8y/: config.yaml  history.parquet  summary.json
moshi-finetune/: pyproject.toml  run_multi_seed_eval.py  test_sampling_params.py  train.py
moshi-finetune/example/: moshi_7B.yaml
moshi-finetune/finetune/: args.py  checkpointing.py  eval.py  eval_prompts.json  eval_prompts_companion.json  eval_prompts_pharma.json  gen_eval.py  loss.py  utils.py  wrapped_model.py
moshi-finetune/finetune/data/: dataset.py  interleaver.py
moshi-finetune/finetune/monitoring/: metrics_logger.py
personaplex/client/src/: audio-processor.ts  index.css
personaplex/client/src/decoder/: decoderWorker.ts
personaplex/client/src/protocol/: encoder.ts
personaplex/moshi/: pyproject.toml
personaplex/moshi/moshi/: LAUNCH.md  bot_to_bot.py  pipecat_server.py  puppeteer.py  screech_detector.py  server.py
personaplex/moshi/moshi/models/: lm.py  loaders.py
personaplex/moshi/moshi/static/: webrtc_client.html
personaplex/moshi/moshi/utils/: compile.py
pipeline/: batch_eval.py  compare_runs.py  compute_injection_offsets.py  compute_prompt_budget.py  convert_messages_to_dialogue.py  create_manifest.py  create_stereo.py  eval_conversation_profile.py  gemini_eval.py  generate_audio.py  generate_dialogues_sync.py  generate_system_prompts.py  merge_lora.py  parse_dialogues.py  podcast_create_stereo.py  podcast_to_mono.py  prepare_companion_v6.py  retry_failures.py  stage_podcast_subset.py
pipeline/utils/: detect_bgmusic.py  test_ab_models.py
(+126 files in other folders)
